# shitty-swarm-manager

./: .ai-instructions.md  .gitignore  .jjignore  .zshrc  AGENTS.md  CLAUDE.md  CONTRACT_REFACTOR_PLAN.md  Cargo.toml  MISSION.md  README.md  RESEARCH.md  RESEARCH_FINDINGS.json  SWARM_REVERSE_PROMPT.md  agent_prompt.md  ai_cli_protocol.cue  contract-spec-swm-kyh.md  contract-spec.md  init.sh  martin-fowler-tests-swm-kyh.md  martin-fowler-tests.md  moon.yml  schema.sql  swarm_state.sql
.agents/: agent_prompt.md  failures.sh  init_postgres_swarm.sh  messages.sh  monitor.sh  progress.sh  spawn_swarm.py  spawn_swarm.sh
.bead-progress/shitty-swarm-manager-20260211005456-jsh5i5fy/: progress.txt
.beads/: issues.jsonl
.beads/schemas/: shitty-swarm-manager-20260209150947-1whlnu4a.cue  shitty-swarm-manager-20260209150947-2zonpkkd.cue  shitty-swarm-manager-20260209150947-alq0zvck.cue  shitty-swarm-manager-20260209150947-bg2wpphh.cue  shitty-swarm-manager-20260209150947-f4zmfcxo.cue  shitty-swarm-manager-20260209150947-nh2el4z3.cue  shitty-swarm-manager-20260209150947-ocsotnqx.cue  shitty-swarm-manager-20260209150947-yj7jokpm.cue  (+49 more)
.moon/: tasks.yml  workspace.yml
.opencode-runs/: salvage-candidates.tsv  salvage-report.md  workspace-orphans-inventory.txt
.zjj/: state.db-shm  state.db-wal  state.events.jsonl
contracts/: contract-src-3jyy.md
db/flyway/: R__seed.sql
docs/: 01_ERROR_HANDLING.md  02_MOON_BUILD.md  03_WORKFLOW.md  05_RUST_STANDARDS.md  08_BEADS.md  09_JUJUTSU.md  BOUNDED_CONTEXTS.md  CLI_REFERENCE.md  UBIQUITOUS_LANGUAGE.md
migrations/: V001__safety_feature_tables.sql
scripts/: ralph_combative_loop_prompt.md  run_db_test_from_env.sh  run_db_test_suite.sh  run_ralph_combative_loop.sh
src/: agent_runtime.rs  agent_runtime_support.rs  beads_sync.rs  canonical_schema.rs  cli.rs  commands.rs  commands_support.rs  config.rs  contracts.rs  db.rs  ddd.rs  diagnostics.rs  error.rs  gate_cache.rs  lib.rs  load_profile.rs  main.rs  monitor.rs  orchestrator_service.rs  output.rs  prompts.rs  protocol_envelope.rs  protocol_runtime.rs  skill_execution.rs  skill_execution_parsing.rs  skill_prompts.rs  stage_executor_content.rs  stage_executors.rs  types.rs
tests/: artifact_retrieval_tests.rs  bdd_contract_suite.rs  cli_contract_additional.rs  cli_e2e.rs  cue_contract.rs  db_bug_fix_tests.rs  exit_code_adversarial_tests.rs  exit_code_integration_tests.rs  protocol_handler_contract_tests.rs  ubiquitous_language_glossary.rs
(+190 files in other folders)
