[package]
name = "shitty-swarm-manager"
version = "0.1.0"
edition = "2021"
authors = ["Lewis Prior <lewis@priors.io>"]
description = "Simple but powerful PostgreSQL-based agent swarm coordination"
license = "MIT"
repository = "https://github.com/lewisprior/shitty-swarm-manager"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
directories = "5.0"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "swarm"
path = "src/main.rs"

[lib]
name = "swarm"
path = "src/lib.rs"
