[package]
name = "shitty-swarm-manager"
version = "0.2.0"
edition = "2021"
authors = ["Lewis <lewis@local>"]
description = "PostgreSQL-based agent swarm coordination"
license = "MIT"
repository = "https://github.com/local/shitty-swarm-manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "macros", "any"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
strsim = "0.10"
itertools = "0.14"
tap = "1.0"
rpds = "1.2"
url = "2.5"

[[bin]]
name = "swarm"
path = "src/main.rs"

[lib]
name = "swarm"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
unused_imports = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.0"
predicates = "3.1"
